{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 122,
  "lineage": "827280fb-0d50-c7ff-db4c-9b1c2c0f9370",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nodejs_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-098839ccaa1a0bff3",
            "arn": "arn:aws:ec2:us-east-1:386093907571:elastic-ip/eipalloc-098839ccaa1a0bff3",
            "association_id": "eipassoc-0b90be2c6677efc20",
            "domain": "vpc",
            "id": "eipalloc-098839ccaa1a0bff3",
            "instance": "i-0e5d7c661e1fd2015",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b1352f63eac4aef0",
            "private_dns": "ip-10-0-1-80.ec2.internal",
            "private_ip": "10.0.1.80",
            "public_dns": "ec2-18-205-137-49.compute-1.amazonaws.com",
            "public_ip": "18.205.137.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nodejs-app-eip"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-eip",
              "Project": "nodejs-app"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.node_repo",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_instance.nodejs_app",
            "aws_internet_gateway.main",
            "aws_security_group.nodejs_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodejs_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03deb8c961063af8c",
            "arn": "arn:aws:ec2:us-east-1:386093907571:instance/i-0e5d7c661e1fd2015",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nodejs-app-ec2-profile",
            "id": "i-0e5d7c661e1fd2015",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b1352f63eac4aef0",
            "private_dns": "ip-10-0-1-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_dns": "ec2-13-219-247-170.compute-1.amazonaws.com",
            "public_ip": "13.219.247.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Environment": "Development",
                  "ManagedBy": "Terraform",
                  "Project": "nodejs-app"
                },
                "throughput": 125,
                "volume_id": "vol-07af04b5b75184bfa",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08975672682b5a72a",
            "tags": {
              "Name": "nodejs-app-ec2"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-ec2",
              "Project": "nodejs-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d0e578ed495a7a0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.node_repo",
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_security_group.nodejs_app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386093907571:internet-gateway/igw-077635ea39c6536a7",
            "id": "igw-077635ea39c6536a7",
            "owner_id": "386093907571",
            "tags": {
              "Name": "nodejs-app-igw"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-igw",
              "Project": "nodejs-app"
            },
            "vpc_id": "vpc-06df2b1305c805cda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386093907571:route-table/rtb-06977c705ee437fc9",
            "id": "rtb-06977c705ee437fc9",
            "owner_id": "386093907571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077635ea39c6536a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodejs-app-public-rt"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-public-rt",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06df2b1305c805cda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073ac7458e5f785c8",
            "route_table_id": "rtb-06977c705ee437fc9",
            "subnet_id": "subnet-08975672682b5a72a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodejs_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386093907571:security-group/sg-07d0e578ed495a7a0",
            "description": "Security group for Node.js application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d0e578ed495a7a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node.js App 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node.js App 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nodejs-app-sg",
            "name_prefix": "",
            "owner_id": "386093907571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nodejs-app-sg"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-sg",
              "Project": "nodejs-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-06df2b1305c805cda"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386093907571:subnet/subnet-08975672682b5a72a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08975672682b5a72a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "386093907571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-app-public-subnet"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-public-subnet",
              "Project": "nodejs-app"
            },
            "vpc_id": "vpc-06df2b1305c805cda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:386093907571:vpc/vpc-06df2b1305c805cda",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a34f4e371c3717ff",
            "default_route_table_id": "rtb-0e94253602d141001",
            "default_security_group_id": "sg-01ab4e9aa2c438cae",
            "dhcp_options_id": "dopt-0840bb27791490b19",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06df2b1305c805cda",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e94253602d141001",
            "owner_id": "386093907571",
            "tags": {
              "Name": "nodejs-app-vpc"
            },
            "tags_all": {
              "Environment": "Development",
              "ManagedBy": "Terraform",
              "Name": "nodejs-app-vpc",
              "Project": "nodejs-app"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}